src/styles/styles.scss
@font-face {
  font-family: "CabinSketch";
  src: url("/fonts/CabinSketch.ttf") format("truetype");
  font-weight: normal;
  font-style: normal;
  font-display: swap;
}
@font-face {
  font-family: "Rowdies";
  src: url("/fonts/Rowdies-Light.ttf") format("truetype");
  font-weight: normal;
  font-style: normal;
  font-display: swap;
}
@font-face {
  font-family: "Rowdies";
  src: url("/fonts/Rowdies-Bold.ttf") format("truetype");
  font-weight: bold;
  font-style: normal;
  font-display: swap;
}
html {
  scroll-behavior: smooth;
}
.backgroundGrid {
  width: 100%;
  height: 100%;
  position: absolute;
  z-index: -9;
  background-size: 50px 50px;
  background-image: linear-gradient(
      rgba(200, 200, 200, 0.1) 1px,
      transparent 1px
    ),
    linear-gradient(to right, rgba(200, 200, 200, 0.1) 1px, transparent 1px);
}
[data-theme="dark"] .backgroundGrid {
  background-image: linear-gradient(
      rgba(200, 200, 200, 0.03) 1px,
      transparent 1px
    ),
    linear-gradient(to right, rgba(200, 200, 200, 0.03) 1px, transparent 1px);
}

